--- a/birdie.html
+++ b/birdie.html
@@ -542,6 +542,12 @@
          .arrow {
          display: none;
          }
+
+          #circle-text {
+        
+         font-size: 20px;
+
+         }
          @media (max-width: 768px) { /* Mobile view */
          #circle-icon,
          #circle-text {
