--- a/birdie.html
+++ b/birdie.html
@@ -484,6 +484,7 @@
          padding: 10px 15px;
          border-radius: 50%;
          user-select: none;
+         z-index: 5;
          }
          .left-arrow {
          left: 400px;
@@ -595,6 +596,9 @@
         <div class="arrow right-arrow" onclick="changeTab(currentIndex + 1)">&#10095;</div>
         <!-- Right Arrow -->
     </div>
+
+ 
+
 </div>
 
 <script>
@@ -667,13 +671,20 @@
 </script>
 
 
-
-
-
-
+<!-- 
+<div class="hero-line2" style="width: 100%; margin-top: -650px; position: relative; z-index: 3 !important; text-align: center;">
+    <img src="./colorlines.png" alt="Hero Decorative Line" style="width: 100%;">
+</div>
+ -->
+ 
   <section class="about-section">
+  
+</div>
+
+
          <div class="about-image"></div>
          <div class="about-content">
+
             <h1 style="text-align: left;">Why YoBirdie?</h1>
             <p  style="text-align: left; color: #00E5E0;">Think of us as the team that's here to take your business to the next level.</p>
 
