--- a/birdie.html
+++ b/birdie.html
@@ -484,16 +484,17 @@
          }
          /* Arrows */
          .arrow {
-         font-size: 20px;
+         font-size: 40px;
          color: white;
          cursor: pointer;
          position: absolute;
-         transform: translateY(-50%);
+         transform: translateY(-500%);
          /*    background: rgba(0, 0, 0, 0.3);*/
          padding: 10px 15px;
-         border-radius: 50%;
+/*         border-radius: 50%;*/
          user-select: none;
          z-index: 5;
+
          }
          .left-arrow {
          left: 400px;
@@ -604,7 +605,7 @@
         </div>
         <div class="arrow right-arrow" onclick="changeTab(currentIndex + 1)">&#10095;</div>
         <!-- Right Arrow -->
-        
+
     </div>
 
  <div class="tabs-curve">
