--- a/birdie.html
+++ b/birdie.html
@@ -24,7 +24,7 @@
          left: 0;
          background: white;
          backdrop-filter: blur(10px);
-         z-index: 1000;
+         z-index: 99999999999 !important;
          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
          }
          .navbar {
