--- a/birdie.html
+++ b/birdie.html
@@ -24,7 +24,7 @@
          left: 0;
          background: white;
          backdrop-filter: blur(10px);
-         z-index: 99999999999 !important;
+         z-index: 999999999999999999 !important;
          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
          }
          .navbar {
@@ -414,7 +414,7 @@
          justify-content: center;
          align-items: center;
          flex-direction: column;
-         margin-top: 20px;
+         margin-top: 100px;
          }
          .tab-content {
     text-align: center; /* Center text horizontally */
@@ -435,6 +435,10 @@
 }
          /* Circle with icon inside */
          .circle {
+      /*      background: url('round_nest.png') no-repeat center/cover; 
+            background-size: contain;*/
+
+
          width: 900px;
          height: 900px;
          background-color: #90D812;
@@ -553,7 +557,13 @@
          .arrow {
          display: none;
          }
-
+.content-container {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         flex-direction: column;
+         margin-top: 10px;
+         }
 
           #circle-text {
         
@@ -708,7 +718,7 @@
 /*    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
       margin: -150px auto 0;
 /*      margin: 0 auto 0;*/
-     z-index: 9999999999999!important;
+     z-index: 99999999!important;
      position: relative;
 
 }
@@ -723,7 +733,8 @@
 
 .why-us-content {
     flex: 1;
-     margin: -700px auto 0;
+     margin: -700px 15px 0;
+
 
 }
 
@@ -763,7 +774,7 @@
     .why-us {
         flex-direction: column-reverse;
         text-align: center;
-         margin-top: -20px;
+         margin-top: -200px;
     }
 
     .why-us img {
@@ -782,8 +793,31 @@
 
  </style>
 
+<style>
+    
+    .curve-bg {
+    background: url('nestcurve.png') no-repeat center top;
+    background-size: cover;
+    height: 727px;
+    width: 100%;
+    position: relative;
+    margin-top: -600px;
+    z-index: 999999!important;
+}
 
-<section style="background: url('nestcurve.png') no-repeat center top; background-size: cover; height: 727px; width: 100%; position: relative; margin-top: -600px; z-index: 999999!important;"></section>
+/* 📱 Mobile Optimization */
+@media (max-width: 768px) { 
+    .curve-bg {
+        background-position: center center; /* Fully centers the image */
+        background-size: contain; /* Prevents cropping */
+        height: 600px; /* Adjust height for mobile */
+        margin-top: -350px; /* Reduce negative margin */
+    }
+}
+
+</style>
+
+<section class="curve-bg"></section>
 
 <section class="why-us">
 
