--- a/tree.html
+++ b/tree.html
@@ -227,6 +227,12 @@
      <section class="tree-services">
 
     <div class="container">
+
+        
+<div class="tree-text">
+        <h2>Your Heading</h2>
+        <p>Your description text goes here.</p>
+    </div>
         <img class="tree" src="tree.png" alt="yobirdietree">
 
         <!-- Dedicated Client Advisor -->
