--- a/birdie.html
+++ b/birdie.html
@@ -1057,7 +1057,7 @@
     }
 
     .contact-section h2 {
-        font-size: 1.5rem; /* Smaller font size on mobile */
+        font-size: 45px; /* Smaller font size on mobile */
     }
 
     .contact-info {
@@ -1066,11 +1066,15 @@
     }
 
     .icon {
-        width: 20px;
+        width: 25px;
         height: auto;
     }
+      span{
+   font-size: 25px;
+   font-weight: 700;
+ 
+ }
 
-    
 
     /* Calendly Widget Responsive Fix */
     .calendly-inline-widget {
@@ -1167,6 +1171,7 @@
          font-size: 1.2rem;
          margin-bottom: 12px;
          }
+        
          .contact p {
          margin: 15px 0;
          font-size: 16px;
@@ -1210,16 +1215,20 @@
          max-width: 100%;
          }
          .newsletter input {
-         width: 100%;
+         width: 80%;
          text-align: center;
          padding: 12px;
          }
          .newsletter button {
-         width: 100%;
+         width: 80%;
          padding: 12px;
          }
          .contact, .navigate {
          text-align: center;
+         }
+         h2
+         {
+            text-align: center;
          }
          .navigate ul {
          padding: 0;
