--- a/birdie.html
+++ b/birdie.html
@@ -1043,7 +1043,7 @@
     width: auto;
     height: 30px;
 }
- span{
+ .contact-info span{
    font-size: 30px;
    font-weight: 700;
    padding:20px;
@@ -1069,7 +1069,7 @@
         width: 25px;
         height: auto;
     }
-      span{
+      .contact-info span{
    font-size: 25px;
    font-weight: 700;
  
