--- a/birdie.html
+++ b/birdie.html
@@ -492,10 +492,10 @@
          z-index: 5;
          }
          .left-arrow {
-         left: 400px;
+         left: 300px;
          }
          .right-arrow {
-         right: 400px;
+         right: 300px;
          }
          .arrow:hover {
          background: rgba(0, 0, 0, 0.6);
@@ -884,12 +884,12 @@
          width: 1280px;
          }
          .intro-text h2 {
-         font-size: 70px;
+         font-size: 60px;
          margin-bottom: 15px;
          color:white;
          }
          .intro-text p {
-         font-size: 30px;
+         font-size: 25px;
          color:white;
          line-height: 1.5;
          }
@@ -908,7 +908,8 @@
          section.tree-container {
          align-items: center;
          padding-top: 0px;
-         margin-top: -600px;
+   margin-top: -600px;
+   padding-top: 570px;
          }
          .tree {
          /*max-width: 250px;
@@ -951,7 +952,7 @@
          @media (max-width: 480px) {
          section.tree-container {
          align-items: center;
-         padding-top: 0;
+         padding-top: 570px;
          padding-bottom: 0px;
          }
          .tree-services
