--- a/birdie.html
+++ b/birdie.html
@@ -909,7 +909,7 @@
          align-items: center;
          padding-top: 0px;
    margin-top: -600px;
-   padding-top: 570px;
+   padding-top: 490px;
          }
          .tree {
          /*max-width: 250px;
@@ -1060,10 +1060,15 @@
     .contact-section h2 {
         font-size: 45px; /* Smaller font size on mobile */
     }
+     .contact-section h3 {
+        font-size: 35px; /* Smaller font size on mobile */
+        margin-bottom: 20px;
+    }
 
     .contact-info {
         flex-direction: column; /* Stack items vertically on small screens */
         font-size: 1rem;
+        line-height: 2px;
     }
 
     .icon {
