--- a/birdie.html
+++ b/birdie.html
@@ -102,7 +102,7 @@
       <!-- NAVIGATION -->
       <div class="navbar-container">
          <nav class="navbar">
-            <a href="#" class="logo"><img src="callbirdie.png" alt="YoBirdie's Logo"></a>
+            <a href="#" class="logo"><img src="https://liammiggy.github.io/yobirdie/callbirdie.png" alt="YoBirdie's Logo"></a>
             <div class="burger" onclick="toggleMenu()">☰</div>
             <div class="nav-links">
                <a href="#">Home</a>
@@ -225,12 +225,12 @@
                <a  href="#" class="btn">Book an Appointment</a>
             </div>
             <div class="hero-image">
-               <img src="./heroimage.png" alt="YoBirdie">
+               <img src="https://liammiggy.github.io/yobirdie/heroimage.png" alt="YoBirdie">
             </div>
          </div>
          <div class="hero-line">
             <!-- <img class="bird" src="./birdline.png" alt="Hero Bird Line"> -->
-            <img src="./colorlines.png" alt="Hero Decorative Line">
+            <img src="https://liammiggy.github.io/yobirdie/colorlines.png" alt="dedicated Support">
          </div>
       </section>
       <style>
@@ -296,7 +296,7 @@
          }
          .about-image {
          flex: 1;
-         background: url('aboutusimage.png') no-repeat center center/cover;
+         background: url('https://liammiggy.github.io/yobirdie/aboutusimage.png') no-repeat center center/cover;
          height: 100%;
          min-height: 300px;
          }
@@ -329,7 +329,7 @@
          .about-content {
          padding: 20px;
          text-align: center;
-         background: url('aboutusimage.png') no-repeat center center/cover;
+         background: url('https://liammiggy.github.io/yobirdie/aboutusimage.png') no-repeat center center/cover;
          height: 100%;
          min-height: 400px;
          display: flex;
@@ -748,7 +748,7 @@
       </style>
       <style>
          .curve-bg {
-         background: url('nestcurve.png') no-repeat center top;
+         background: url('https://liammiggy.github.io/yobirdie/nestcurve.png') no-repeat center top;
          background-size: cover;
          height: 727px;
          width: 100%;
@@ -768,7 +768,7 @@
       </style>
       <section class="curve-bg"></section>
       <section class="why-us">
-         <img src="birdclip.png" alt="Why Us">
+         <img src="https://liammiggy.github.io/yobirdie/birdclip.png" alt="Why Us">
          <div class="why-us-content">
             <h2>Why YoBirdie?</h2>
             <p>Think of us as the team that's here to take your business to the next level.</p>
@@ -791,7 +791,7 @@
          }*/
          .tree-services {
          padding: 0;
-         background: url('servicesbg.webp') no-repeat center center;
+         background: url('https://liammiggy.github.io/yobirdie/servicesbg.webp') no-repeat center center;
          background-size: cover;
          display: flex;
          justify-content: center;
@@ -860,7 +860,7 @@
          top: 610px;
          width: 110px;
          height: 40px;
-         background-image: url('leftline.png');
+         background-image: url('https://liammiggy.github.io/yobirdie/leftline.png');
          background-size: cover;
          background-repeat: no-repeat;
          background-position: center;
@@ -871,7 +871,7 @@
          top: 700px;
          width: 110px;
          height: 40px;
-         background-image: url('leftline.png');
+         background-image: url('https://liammiggy.github.io/yobirdie/leftline.png');
          background-size: cover;
          background-repeat: no-repeat;
          background-position: center;
@@ -991,7 +991,7 @@
                   <p>Find your right solution here. Get a Client Advocate<br> with the right connections on your side.</p>
                </div>
             </section>
-            <img style ="width: 841px;" class="tree" src="tree.png" alt="yobirdietree">
+            <img style ="width: 841px;" class="tree" src="https://liammiggy.github.io/yobirdie/tree.png" alt="yobirdietree">
             <!-- Dedicated Client Advisor -->
             <div class="info-box advisor">Dedicated Client Advisor</div>
             <div class="line line-left"></div>
@@ -1068,7 +1068,7 @@
     .contact-info {
         flex-direction: column; /* Stack items vertically on small screens */
         font-size: 1rem;
-        line-height: 2px;
+       
     }
 
     .icon {
