--- a/birdie.html
+++ b/birdie.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>YoBirdie</title>
-      <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-      <style>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <meta name="description" content="Dedicated Support Services for Your Business Needs at Your Call. Get expert assistance whenever you need it.">
+         <meta property="og:title" content="Dedicated Support Services for Your Business Needs at Your Call">
+         <meta property="og:description" content="Get expert assistance tailored to your business needs, available whenever you need it.">
+         <meta name="twitter:title" content="Dedicated Support Services for Your Business Needs at Your Call">
+         <meta name="twitter:description" content="Expert business support services at your fingertips. Get in touch today!">
+         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+         <title>YoBirdie</title>
+         <style>
          * {
          margin: 0;
          padding: 0;
@@ -412,7 +417,7 @@
          justify-content: center;
          align-items: center;
          flex-direction: column;
-         margin-top: 100px;
+         margin-top: 50px;
          }
          .tab-content {
          text-align: center; /* Center text horizontally */
@@ -425,14 +430,18 @@
          padding: 10px;
          }
          .tab-description {
-         font-size: 18px;
+         font-size: 20px;
          max-width: 900px; 
          line-height: 1.5;
          color: white;
+          min-height: 90px; 
+          text-align: center;
+          overflow: hidden; 
+      
          }
          /* Circle with icon inside */
          .circle {
-           background: url('birdienest.webp') no-repeat center/cover; 
+           background: url('https://liammiggy.github.io/yobirdie/birdienest.webp') no-repeat center/cover; 
          background-size: contain;
          width: 850px;
          height: 850px;
@@ -479,6 +488,7 @@
          padding: 20px;
          padding-left: 90px;
          padding-right: 90px;
+
          }
          /* Arrows */
          .arrow {
