--- a/birdie.html
+++ b/birdie.html
@@ -349,7 +349,7 @@
       .about-section {
          display: flex;
          flex-direction: column;
-         background: url('https://liammiggy.github.io/yobirdie/aboutusimage.png') no-repeat center center;
+         background: url('horse.webp') no-repeat center center;
          background-size: cover;
       }
 
