--- a/birdie.html
+++ b/birdie.html
@@ -305,7 +305,7 @@
       top:-200px;
       bottom: 0;
       width: 50%;
-      background: url('https://liammiggy.github.io/yobirdie/horseridea.webp') no-repeat center center;
+      background: url('https://liammiggy.github.io/yobirdie/horseride.webp') no-repeat center center;
       background-size: cover;
       z-index: 99999999999 !important;
     
