--- a/birdie.html
+++ b/birdie.html
@@ -114,6 +114,7 @@
                <a href="#">About</a>
                <a href="#">Services</a>       
                <a href="#">Contact</a>
+                <a href="#">Articles</a>
                <a href="#"  style="color:white;" class="nav-button">Book an Appointment</a>
             </div>
          </nav>
