--- a/callbirdie.html
+++ b/callbirdie.html
@@ -43,7 +43,7 @@
                <a  href="#contact" class="btn">Book an Appointment</a>
             </div>
             <div class="hero-image">
-               <img src="https://liammiggy.github.io/yobirdie/heroimage.png" alt="YoBirdie">
+               <img src="" alt="YoBirdie">
             </div>
          </div>
          <div class="hero-line">
