--- a/callbirdie.html
+++ b/callbirdie.html
@@ -10,7 +10,18 @@
          <meta property="og:description" content="Get expert assistance tailored to your business needs, available whenever you need it.">
          <meta name="twitter:title" content="Dedicated Support Services for Your Business Needs at Your Call">
          <meta name="twitter:description" content="Expert business support services at your fingertips. Get in touch today!">
-         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+         
+         <!-- Preconnect to Google Fonts domains -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<!-- Preload the font CSS -->
+<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
+
+<!-- Load stylesheet without blocking render -->
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+<noscript><link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet"></noscript>
+
         
          <title>YoBirdie</title>
          <link rel="stylesheet" href="style.css">
