--- a/birdie - wordpress.html
+++ b/birdie - wordpress.html
@@ -414,7 +414,7 @@
       top:-200px;
       bottom: 0;
       width: 50%;
-      background: url('https://liammiggy.github.io/yobirdie/horseGradient.webp') no-repeat center center;
+      background: url('https://liammiggy.github.io/yobirdie/horse_web.webp') no-repeat center center;
       background-size: cover;
       z-index: 99999 !important;
     
