--- a/videobird.html
+++ b/videobird.html
@@ -19,7 +19,7 @@
 <body>
   <!-- Save for Web Slices (Bird-animation-01.psdc) -->
   <video width="1226" height="1996" controls autoplay muted loop>
-    <source src="Bird-animation-01.mov" type="video/mp4">
+    <source src="https://liammiggy.github.io/yobirdie/Bird-animation-01.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   <!-- End Save for Web Slices -->
