--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -24,20 +24,20 @@
                         <br>
                         <div style="margin-top: 8px;">
                             <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="reddit-icon-url.png" alt="Reddit" style="width: 20px; height: 20px;">
+                                <img src="https://liammiggy.github.io/yobirdie/redditbirdie.png" alt="Reddit" style="width: 20px; height: 20px;">
                             </a>
-                            <a href="#" style="text-decoration: none; margin-right: 10px;">
+                            <!-- <a href="#" style="text-decoration: none; margin-right: 10px;">
                                 <img src="twitter-icon-url.png" alt="Twitter" style="width: 20px; height: 20px;">
+                            </a> -->
+                            <a href="#" style="text-decoration: none; margin-right: 10px;">
+                                <img src="https://liammiggy.github.io/yobirdie/facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
                             </a>
                             <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="facebook-icon-url.png" alt="Facebook" style="width: 20px; height: 20px;">
+                                <img src="https://liammiggy.github.io/yobirdie/LinkedIn .png" alt="LinkedIn" style="width: 20px; height: 20px;">
                             </a>
-                            <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="linkedin-icon-url.png" alt="LinkedIn" style="width: 20px; height: 20px;">
-                            </a>
-                            <a href="#" style="text-decoration: none;">
+                            <!-- <a href="#" style="text-decoration: none;">
                                 <img src="skype-icon-url.png" alt="Skype" style="width: 20px; height: 20px;">
-                            </a>
+                            </a> -->
                         </div>
                     </td>
                 </tr>
