--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -2,7 +2,7 @@
     <tr>
         <td style="padding-bottom: 5px;">
             <span style="font-size: 30px; font-weight: bold; color: #0ABAB5;">Name Here</span><br>
-            <span style="font-size: 20px; color: #999999;">Your Position Here</span>
+            <span style="font-size: 20px;line-height: 1.1;color: #999999; ">Your Position Here</span>
         </td>
     </tr>
     <tr>
