--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -33,10 +33,10 @@
                             <!-- <a href="#" style="text-decoration: none; margin-right: 10px;">
                                 <img src="twitter-icon-url.png" alt="Twitter" style="width: 20px; height: 20px;">
                             </a> -->
-                            <a href="#" style="text-decoration: none; margin-right: 10px;">
+                            <a href="https://www.facebook.com/profile.php?id=61574224027115" style="text-decoration: none; margin-right: 10px;">
                                 <img src="https://liammiggy.github.io/yobirdie/facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
                             </a>
-                            <a href="#" style="text-decoration: none; margin-right: 10px;">
+                            <a href="https://www.linkedin.com/company/yobirdie/about/" style="text-decoration: none; margin-right: 10px;">
                                 <img src="https://liammiggy.github.io/yobirdie/LinkedIn.png" alt="LinkedIn" style="width: 20px; height: 20px;">
                             </a>
                             <!-- <a href="#" style="text-decoration: none;">
