--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -28,7 +28,7 @@
                         <br>
                         <div style="margin-top: 8px;">
                             <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="https://liammiggy.github.io/yobirdie/redditbirdie.png" alt="Reddit" style="width: 20px; height: 20px;">
+                                <img src="https://liammiggy.github.io/yobirdie/ig.png" alt="Reddit" style="width: 20px; height: 20px;">
                             </a>
                             <!-- <a href="#" style="text-decoration: none; margin-right: 10px;">
                                 <img src="twitter-icon-url.png" alt="Twitter" style="width: 20px; height: 20px;">
