--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -13,7 +13,7 @@
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td style="width: 150px; vertical-align: top;">
-                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/birdie.png" alt="Birdie" style="height: 35px; margin-top: 5px;">
+                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/birdie.png" alt="Birdie" style="height: 40px; margin-top: 5px;">
 </a>
 
                     </td>
@@ -50,7 +50,7 @@
     </tr>
     <tr>
         <td style="padding-top: 10px;">
-            <a href="https://callbirdie.com/" style="text-decoration: none;">
+            <a href="https://callbirdie.com/" style="text-decoration: none;"><br>
                 <img src="https://liammiggy.github.io/yobirdie/birdiepromobanner.png" alt="Birdie" style="width: 100%;">
             </a>
         </td>
