--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -50,7 +50,7 @@
     </tr>
     <tr>
         <td style="padding-top: 10px;">
-            <a href="https://callbirdie.com/" style="text-decoration: none;"><br>
+            <a href="https://callbirdie.com/" style="text-decoration: none;">
                 <img src="https://liammiggy.github.io/yobirdie/birdiepromobanner.png" alt="Birdie" style="width: 100%;">
             </a>
         </td>
