--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -27,8 +27,8 @@
                         </span>
                         <br>
                         <div style="margin-top: 8px;">
-                            <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="https://liammiggy.github.io/yobirdie/ig.png" alt="Reddit" style="width: 20px; height: 20px;">
+                            <a href="https://www.instagram.com/birdie_llc/" style="text-decoration: none; margin-right: 10px;">
+                                <img src="https://liammiggy.github.io/yobirdie/ig.png" alt="instagram" style="width: 20px; height: 20px;">
                             </a>
                             <!-- <a href="#" style="text-decoration: none; margin-right: 10px;">
                                 <img src="twitter-icon-url.png" alt="Twitter" style="width: 20px; height: 20px;">
