--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -1,8 +1,8 @@
 <table style="font-family: Nunito, sans-serif; width: 500px; border-collapse: collapse;">
     <tr>
         <td style="padding-bottom: 5px;">
-            <span style="font-size: 30px; font-weight: bold; color: #0ABAB5;">Name Here</span><br>
-            <span style="font-size: 20px;line-height: 1.1;color: #999999; ">Your Position Here</span>
+            <span style="font-size: 30px; font-weight: bold; color: #0ABAB5;">Name Here</span>
+            <span style="font-size: 26px;line-height: 1.1;color: #999999; "> | Your Position Here</span>
         </td>
     </tr>
     <tr>
@@ -13,7 +13,7 @@
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td style="width: 150px; vertical-align: top;">
-                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/birdie.png" alt="Birdie" style="height: 40px; margin-top: 5px;">
+                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/birdie.png" alt="Birdie" style="height: 45px; margin-top: 5px;">
 </a>
 
                     </td>
@@ -21,7 +21,7 @@
                         <span style="font-size: 14px; color: #0ABAB5;">
                             <strong>Phone:</strong> <span style="color: #333;">888-888-8888</span>
                             <strong>Website:</strong>
-                          <a href="https://callbirdie.com/" style="color: #0B3D91; text-decoration: none; border: none; outline: none;">birdie.com</a>
+                          <a href="https://callbirdie.com/#contact" style="color: #0B3D91; text-decoration: none; border: none; outline: none;">birdie.com</a>
 
 
                         </span>
