--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -1,58 +1,72 @@
+<style>
+    
+    .underline {
+  border: none;
+  outline: none;
+  color: #0ABAB5;
+}
+
+</style>
+
 <table style="font-family: Nunito, sans-serif; width: 500px; border-collapse: collapse;">
     <tr>
         <td style="padding-bottom: 5px;">
             <span style="font-size: 30px; font-weight: bold; color: #0ABAB5;">Name Here</span>
-            <span style="font-size: 26px;line-height: 1.1;color: #999999; "> | Your Position Here</span>
+            <span style="font-size: 21px;line-height: 1.1;color: #999999;margin-left: 10px; ">   |  Your Position Here</span>
         </td>
     </tr>
     <tr>
-        <td style="border-bottom: 1px solid #8B8B8B; padding-bottom: 8px;"></td>
+        <td style="border-bottom: 0.5px solid #A1A1A1; padding-bottom: 8px;"></td>
     </tr>
     <tr>
         <td style="padding-top: 8px;">
             <table style="width: 100%; border-collapse: collapse;">
                 <tr>
                     <td style="width: 150px; vertical-align: top;">
-                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/birdie.png" alt="Birdie" style="height: 45px; margin-top: 5px;">
+                      <a href="https://callbirdie.com/" style="text-decoration: none;"><img src="https://liammiggy.github.io/yobirdie/emaillogo.png" alt="Birdie" style="height: 45px; margin-top: 5px;">
 </a>
 
                     </td>
-                    <td style="border-left: 1px solid #8B8B8B; padding-left: 10px;">
-                        <span style="font-size: 14px; color: #0ABAB5;">
-                            <strong>Phone:</strong> <span style="color: #333;">888-888-8888</span>
-                            <strong>Website:</strong>
-                          <a href="https://callbirdie.com/#contact" style="color: #0B3D91; text-decoration: none; border: none; outline: none;">birdie.com</a>
+                    <td style="border-left: 0.5px solid #A1A1A1; padding-left: 15px;">
+                        <span style="font-size: 18px; color: #0ABAB5;">        
+                        <a href="https://callbirdie.com" class="underline">callbirdie.com</a> <span style="color:#A1A1A1;"> | </span>             
+                        <!-- <a href="https://callbirdie.com/#contact" class="underline">Call Birdie</a> -->
 
 
+                            <a href="https://www.instagram.com/birdie_llc/" style="text-decoration: none; padding-left: 15px;">
+                                <img src="https://liammiggy.github.io/yobirdie/ig.png" alt="instagram" style="width: 20px; height: 20px;">
+                            </a>
+                           
+                            <a href="https://www.facebook.com/profile.php?id=61574224027115" style="text-decoration: none; padding-left: 15px;">
+                                <img src="https://liammiggy.github.io/yobirdie/facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
+                            </a>
+                            <a href="https://www.linkedin.com/company/yobirdie/about/" style="text-decoration: none; padding-left: 15px;">
+                                <img src="https://liammiggy.github.io/yobirdie/LinkedIn.png" alt="LinkedIn" style="width: 20px; height: 20px;">
+                            </a>
                         </span>
                         <br>
                         <div style="margin-top: 8px;">
-                            <a href="https://www.instagram.com/birdie_llc/" style="text-decoration: none; margin-right: 10px;">
-                                <img src="https://liammiggy.github.io/yobirdie/ig.png" alt="instagram" style="width: 20px; height: 20px;">
-                            </a>
-                            <!-- <a href="#" style="text-decoration: none; margin-right: 10px;">
-                                <img src="twitter-icon-url.png" alt="Twitter" style="width: 20px; height: 20px;">
-                            </a> -->
-                            <a href="https://www.facebook.com/profile.php?id=61574224027115" style="text-decoration: none; margin-right: 10px;">
-                                <img src="https://liammiggy.github.io/yobirdie/facebook.png" alt="Facebook" style="width: 20px; height: 20px;">
-                            </a>
-                            <a href="https://www.linkedin.com/company/yobirdie/about/" style="text-decoration: none; margin-right: 10px;">
-                                <img src="https://liammiggy.github.io/yobirdie/LinkedIn.png" alt="LinkedIn" style="width: 20px; height: 20px;">
-                            </a>
-                            <!-- <a href="#" style="text-decoration: none;">
-                                <img src="skype-icon-url.png" alt="Skype" style="width: 20px; height: 20px;">
-                            </a> -->
-                        </div>
+                                <a href="https://callbirdie.com/#contact" 
+                                   style="display: inline-flex; align-items: center; background-color: #0ABAB5; color: white; 
+                                          padding: 10px 20px; text-decoration: none; border-radius: 30px; font-size: 16px; font-weight: 500;">
+                                    <img src="https://liammiggy.github.io/yobirdie/calendar-icon.png" 
+                                         alt="Calendar Icon" 
+                                         style="width: 24px; height: 24px; margin-right: 10px;">
+                                    Book a Call
+                                </a>
+                            </div>
+
+
                     </td>
                 </tr>
             </table>
         </td>
     </tr>
     <tr>
-        <td style="padding-top: 10px;">
+       <!--  <td style="padding-top: 10px;">
             <a href="https://callbirdie.com/" style="text-decoration: none;">
-                <img src="https://liammiggy.github.io/yobirdie/birdiepromobanner.png" alt="Birdie" style="width: 100%;">
+                <img src="https://liammiggy.github.io/yobirdie/birdiebanner.png" alt="Birdie" style="width: 100%;">
             </a>
-        </td>
+        </td> -->
     </tr>
 </table>
