--- a/birdieSignature.html
+++ b/birdieSignature.html
@@ -49,13 +49,13 @@
 
                         <!-- Book a Call Button -->
                        <div style="margin-top: 12px;">
-    <a href="https://callbirdie.com/#contact" 
-       style="display: inline-block; text-decoration: none !important;">
-        <img src="https://liammiggy.github.io/yobirdie/calendar.png" 
-             alt="Book a Call" 
-             style="width: 42px; height: 42px; display: block;">
-    </a>
-</div>
+                            <a href="https://callbirdie.com/#contact" 
+                               style="display: inline-block; text-decoration: none !important;">
+                                <img src="https://liammiggy.github.io/yobirdie/bookacall.png" 
+                                     alt="Book a Call" 
+                                     style="width: 100%; height: 42px; display: block;">
+                            </a>
+                        </div>
 
                     </td>
                 </tr>
