--- a/itadsummit.html
+++ b/itadsummit.html
@@ -1,3 +1,3 @@
-<a href="rsd2.com" target="_blank">
+<a href="https://www.rsd2.com" target="_blank">
   <img src="rsd2-ITAD SUMMIT1-05.png" alt="Click to visit" width="600" style="display:block; border:0;">
 </a>
