--- a/itadsummit.html
+++ b/itadsummit.html
@@ -1,3 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  
+  <style>
+    body {
+      background: #111;
+      color: #fff;
+      font-family: sans-serif;
+      padding: 2rem;
+    }
+    pre {
+      background: #222;
+      padding: 1rem;
+      border-radius: 6px;
+      overflow: auto;
+      white-space: pre-wrap;
+    }
+    button {
+      margin-top: 1rem;
+      background: #4ade80;
+      color: #000;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+
+<h2>Preview:</h2>
 <a href="https://www.rsd2.com" target="_blank">
   <img src="rsd2-ITAD SUMMIT1-05.png" alt="Click to visit" width="600" style="display:block; border:0;">
 </a>
+
+<h2>Copy this HTML:</h2>
+<pre id="code">
+&lt;a href="https://www.rsd2.com" target="_blank"&gt;
+  &lt;img src="rsd2-ITAD SUMMIT1-05.png" alt="Click to visit" width="600" style="display:block; border:0;"&gt;
+&lt;/a&gt;
+</pre>
+
+<button onclick="copyHTML()">Copy All</button>
+
+<script>
+  function copyHTML() {
+    const code = document.getElementById("code").innerText;
+    navigator.clipboard.writeText(code).then(() => {
+      alert("HTML copied to clipboard!");
+    }).catch(err => {
+      alert("Failed to copy: " + err);
+    });
+  }
+</script>
+
+</body>
+</html>
